# app/Http/Controllers/UserController.php
@@ -2,8 +2,12 @@
 
 namespace App\Http\Controllers;
 
+use App\Http\Requests\AuthUserRequest;
 use App\Http\Requests\CreateUserRequest;
+use App\Models\User;
 use App\Services\UserService;
+use Tymon\JWTAuth\Exceptions\JWTException;
+use Tymon\JWTAuth\Facades\JWTAuth;
 
 class UserController extends ApiController
 {
@@ -40,5 +44,35 @@ class UserController extends ApiController
         $user = $this->userService->registration($request->all());
 
         return response()->json($user->toArray(), 201);
+    }
+
+    /**
+     * @SWG\Post(
+     *   path="/auth",
+     *   summary="Auth",
+     *   tags={"Users"},
+     *   produces={"application/json"},
+     *   @SWG\Parameter( name="email", description="User email", required=true, type="string", in="query"),
+     *   @SWG\Parameter( name="password", description="User password", required=true, type="string", in="query"),
+     *   @SWG\Response( response=200, description="Success authorization"),
+     *   @SWG\Response( response=401, description="Invalid credentials"),
+     * )
+     * @param AuthUserRequest $request
+     * @return \Illuminate\Http\JsonResponse
+     */
+    public function auth(AuthUserRequest $request)
+    {
+        $credentials = $request->only('email', 'password');
+        try {
+            if (! $token = JWTAuth::attempt($credentials)) {
+                return response()->json(['error' => trans('auth.failed')], 401);
+            }
+        } catch (JWTException $e) {
+            return response()->json(['error' => "Couldn't generate token"], 500);
+        }
+
+        $user = User::where('email', $credentials['email'])->first();
+        $user->token = $token;
+        return response()->json($user->toArray(), 200);
     }
 }
